--- a/pages/products/products.module.css
+++ b/pages/products/products.module.css
@@ -9,11 +9,11 @@ flex:7;
     
 flex:3;
 padding:0px 0px 0px 0px;
-margin:0px 0px 0px 0px; 
+margin:-30px 0px 0px 30px; 
 }
 .product_area{
 display:flex;
-padding:0px 50px 0px 50px;
+padding:0px 50px 0px 0px;
 
 }
 .container{
